--- a/formRecaptcha/.env
+++ b/formRecaptcha/.env
@@ -32,4 +32,12 @@ DATABASE_URL=mysql://root:sf4@127.0.0.1:3306/sf4
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
+
 ###< symfony/swiftmailer-bundle ###
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=6Lc5DKgUAAAAAIejovEpTX6XImCrwRlQawRbbyNL
+GOOGLE_RECAPTCHA_SECRET=6Lc5DKgUAAAAAHVitpwWbHuHrvuxFLquD5WaeRNL
+###< google/recaptcha ###
